--- a/src/App.css
+++ b/src/App.css
@@ -1,1 +1,20 @@
+.App {
+  text-align: center;
+  color: whitesmoke;
+  background-color: steelblue;
+}
 
+.App-header {
+  height: 150px;
+  padding: 20px;
+  color: rgb(255, 255, 255);
+}
+
+.App-title {
+  font-size: 1.5em;
+  text-shadow: 1px 1px 3px black;
+}
+
+.App-intro {
+  font-size: large;
+}
