--- a/src/App.css
+++ b/src/App.css
@@ -79,22 +79,31 @@ article {
 }
 
 .doggo-card {
-  height: 8rem;
+  height: 24vh;
   background-color: rgba(255, 255, 255, 0.4);
   outline: 1px solid black;
   width: 100%;
   justify-content: space-evenly;
+  padding: 1rem 0;
 }
 
 .doggo-title {
-  border: 1px solid black;
+  /* border: 1px solid black; */
   display: flex;
   flex-direction: column;
+  /* align-items: center; */
 }
 
 .doggo-title h4 {
-  border: 1px solid green;
+  /* border: 1px solid green; */
+  width: 100%;
+  text-align: center;
+}
 
+.doggo-title img {
+  height: 150px;
+  width: 150px;
+  background-color: gray;
 }
 
 .status {
