--- a/src/App.css
+++ b/src/App.css
@@ -97,31 +97,29 @@ article h3 {
 }
 
 .doggo-card h4 {
-  width: 30%;
+  /* width: 30%; */
   /* align-self: center; */
 }
 
 .doggo-card {
-  height: 18vh;
-  /* background-color: rgba(255, 255, 255, 0.4); */
-  /* background-image: linear-gradient(to right, #5067a1, #4d6297, #4b5c8d, #485784, #45527a); */
-  background-image: linear-gradient(to right, #475b8e, #435482, #3e4d77, #3a476c, #354061);
-  box-shadow: 1px 1px 1px 1px #383E4F;
-  /* box-shadow: 4px 4px 0px 4px #383E4F; */
-  border-radius: 1rem;
+  height: 150px;
   width: 100%;
+  /* background-color: rgba(255, 255, 255, 0.4); */
+  background-image: linear-gradient(to right, #475b8e, #435482, #3e4d77, #3a476c, #354061);
+  border-radius: 1rem;
+  box-shadow: 0 0 0 1px #383E4F;
   justify-content: space-evenly;
-  padding: 1rem 0;
   margin-bottom: 1rem;
+  padding: 1% 0;
 }
 
 .doggo-title {
-  /* border: 1px solid black; */
+  height: 90%;
   display: flex;
   flex-direction: column;
   align-self: center;
-  justify-content: space-between;
-  height: 90%;
+  justify-content: space-evenly;
+  margin-right: 4rem;
 }
 
 .doggo-title h4 {
@@ -138,9 +136,23 @@ article h3 {
 }
 
 .status {
-  /* width: 50%; */
+  height: 100%;
   display: flex;
   flex-direction: column;
+  justify-content: space-around;
+}
+
+.status div {
+  text-align: center;
+}
+
+.bfast-status,
+.dinner-status {
+  display: flex;
   justify-content: space-evenly;
-  height: 100%;
+}
+
+small {
+  font-size: 10px;
+  color: gray;
 }
