--- a/src/App.css
+++ b/src/App.css
@@ -155,7 +155,7 @@ article h3 {
   text-align: center;
 }
 
-.doggo-title img {
+.doggo-title div {
   height: 80px;
   width: 80px;
   /* background-size: 150px 200px;
@@ -164,7 +164,7 @@ article h3 {
   box-shadow: 0 0 1px 1px #383E4F;
 }
 
-.frank {
+.franklin {
   background-image: url("./Franklin.jpg");
   background-size: 100px 120px;
   background-position: center;
@@ -223,6 +223,10 @@ small {
 }
 
 @media screen and (min-width: 720px) {
+  header h2 {
+    font-size: 2.5rem;
+  }
+
   .card-container {
     width: 70%;
   }
