--- a/src/App.css
+++ b/src/App.css
@@ -252,7 +252,8 @@ small {
   color: gray;
   /* word-wrap: normal; */
   text-align: center;
-  height: 24px;;
+  height: 24px;
+  width: 70%;
 }
 
 @media screen and (min-width: 720px) {
